css/main.css
:root {
    --var-block-width: minmax(30px, 190px);
}

body {
    background-color: #151515;
    margin: 0;
}


header {
    background-color: #0f0e0e;
    color: #ed9012;
}

header>div{
    max-width: 1600px;
    margin: 0 auto;
}

#terminal {
    margin: 0;
    font-family: 'FiraCode NF';
    margin: 0 50px;
    font-size: 16px;
}

#terminal::after {
    content: attr(data-end);
    color: #ee8c16;
    animation: typing-blink 1.5s linear 0s infinite;
}

main {
    max-width: 1600px;
    margin: 0 auto;
}

#container {
    display: grid;
    grid-template-columns: repeat(7, var(--var-block-width) calc(100vw*0.01)) var(--var-block-width);
    margin: 50px;
}

img {
    transition: .5s;
    -webkit-user-select: none;
    user-select: none;
    width: 100%;
    height: 100%;
}

#gap {
    grid-row: 2;
    height: calc(100vw*0.05);
}

.letter {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

.letter:hover {
    background-color: white;
    border-radius: calc(100vw*0.03);
    box-shadow: 0 0 5px 5px #fff,
        0 0 30px calc(100vw*.01) #0685a9,
        0 0 40px calc(100vw*.02) #03158d,
        0 0 50px calc(100vw*.03) #430ead;
}

.letter:hover>#m-topleft,
.letter:hover>#y-topleft,
.letter:hover>#p-topleft,
.letter:hover>#r-topleft,
.letter:hover>#o-topleft,
.letter:hover>#j-topleft,
.letter:hover>#e-topleft,
.letter:hover>#c-topleft,
.letter:hover>#t-topleft,
.letter:hover>#s-topleft {
    transform: translate(calc(100vw*-.02), calc(100vw*-.04)) rotate(30deg);
}

.letter:hover>#m-topright,
.letter:hover>#y-topright,
.letter:hover>#p-topright,
.letter:hover>#r-topright,
.letter:hover>#o-topright,
.letter:hover>#j-topright,
.letter:hover>#e-topright,
.letter:hover>#c-topright,
.letter:hover>#t-topright,
.letter:hover>#s-topright {
    transform: translate(calc(100vw*.02), calc(100vw*-.04)) rotate(-30deg);
}

.letter:hover>#m-botleft,
.letter:hover>#y-botleft,
.letter:hover>#p-botleft,
.letter:hover>#r-botleft,
.letter:hover>#o-botleft,
.letter:hover>#j-botleft,
.letter:hover>#e-botleft,
.letter:hover>#c-botleft,
.letter:hover>#t-botleft,
.letter:hover>#s-botleft {
    transform: translate(calc(100vw*-.02), calc(100vw*.04)) rotate(-30deg);
}

.letter:hover>#m-botright,
.letter:hover>#y-botright,
.letter:hover>#p-botright,
.letter:hover>#r-botright,
.letter:hover>#o-botright,
.letter:hover>#j-botright,
.letter:hover>#e-botright,
.letter:hover>#c-botright,
.letter:hover>#t-botright,
.letter:hover>#s-botright {
    transform: translate(calc(100vw*.02), calc(100vw*.04)) rotate(30deg);
}

#m-letter {
    grid-column: 7;
    grid-row: 1;
    /* background-color: white; */
}

#y-letter {
    grid-column: 9;
    grid-row: 1;
    /* background-color: white; */
}

#p-letter {
    grid-column: 1;
    grid-row: 3;
    /* background-color: white; */
}

#m-letter:hover,
#y-letter:hover,
#p-letter:hover,
#r-letter:hover,
#o-letter:hover,
#j-letter:hover,
#e-letter:hover,
#c-letter:hover,
#t-letter:hover,
#s-letter:hover {
    z-index: 2;
}

#r-letter {
    grid-column: 3;
    grid-row: 3;
    /* background-color: white; */
}

#o-letter {
    grid-column: 5;
    grid-row: 3;
    /* background-color: white; */
}

#j-letter {
    grid-column: 7;
    grid-row: 3;
}

#e-letter {
    grid-column: 9;
    grid-row: 3;
    /* background-color: white; */
}

#c-letter {
    grid-column: 11;
    grid-row: 3;
    /* background-color: white; */
}

#t-letter {
    grid-column: 13;
    grid-row: 3;
    /* background-color: white; */
}

#s-letter {
    grid-column: 15;
    grid-row: 3;
    /* background-color: white; */
}

@keyframes typing-blink {
    20% {
        opacity: 1;
    }

    25% {
        opacity: 0;
    }

    75% {
        opacity: 0;
    }

    80% {
        opacity: 1;
    }
}

@media only screen and (min-width: 561px) {
    #terminal {
        font-size: 20px;
    }
}

@media only screen and (min-width: 1025px) {
    #terminal {
        font-size: 27px;
    }
}

